feat: GET /syncs/progress/documentHash implementation done
